--- a/package.json
+++ b/package.json
@@ -21,21 +21,15 @@
     "test:ci": "c8 --clean --reporter=text --reporter=lcov --reporter=html --include=src node --test test/*.test.js"
   },
   "dependencies": {
-    "ansi-styles": "^6.2.1",
-    "cbor": "^10.0.3",
-    "chalk": "^5.4.1",
-    "concordance": "^5.0.4",
-    "indent-string": "^5.0.0",
+    "@jest/snapshot-utils": "30.0.0-alpha.7",
     "memoize": "^10.1.0",
-    "slash": "^5.1.0",
-    "strip-ansi": "^7.1.0",
-    "write-file-atomic": "^6.0.0"
+    "pretty-format": "30.0.0-alpha.7"
   },
   "peerDependencies": {
-    "expect": "^29.7.0"
+    "expect": "^29 || ^30"
   },
   "devDependencies": {
     "c8": "^10.1.3",
-    "expect": "^29.7.0"
+    "expect": "^30.0.0-alpha.7"
   }
 }
