--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,6 +16,6 @@ jobs:
       - run: yarn install
       - run: yarn build
       - run: yarn test
-      - run: yarn workspaces foreach -A --no-private run publish_to_npm
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
