--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   ],
   "author": "Stéphane Goetz <onigoetz@onigoetz.ch>",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "module",
   "main": "src/index.js",
   "engines": {
