--- a/package.json
+++ b/package.json
@@ -1,39 +1,35 @@
 {
-  "name": "@onigoetz/ntr-expect-snapshot",
-  "version": "0.2.0",
-  "keywords": [
-    "snapshot",
-    "testing",
-    "node",
-    "test",
-    "node:test",
-    "expect"
-  ],
-  "author": "Stéphane Goetz <onigoetz@onigoetz.ch>",
-  "license": "MIT",
-  "publishConfig": {
-    "access": "public"
-  },
-  "type": "module",
-  "main": "src/index.js",
-  "engines": {
-    "node": ">=18"
-  },
-  "scripts": {
-    "build": "true",
-    "test": "node --test test/*.test.js",
-    "test:ci": "c8 --clean --reporter=text --reporter=lcov --reporter=html --include=src node --test test/*.test.js"
-  },
-  "dependencies": {
-    "@jest/snapshot-utils": "30.0.0-alpha.7",
-    "ci-info": "^4.2.0",
-    "pretty-format": "30.0.0-alpha.7"
-  },
-  "peerDependencies": {
-    "expect": "^29 || ^30"
-  },
-  "devDependencies": {
-    "c8": "^10.1.3",
-    "expect": "^30.0.0-alpha.7"
-  }
+	"name": "@onigoetz/ntr-expect-snapshot",
+	"version": "0.2.0",
+	"keywords": ["snapshot", "testing", "node", "test", "node:test", "expect"],
+	"author": "Stéphane Goetz <onigoetz@onigoetz.ch>",
+	"license": "MIT",
+	"publishConfig": {
+		"access": "public"
+	},
+	"type": "module",
+	"main": "src/index.js",
+	"engines": {
+		"node": ">=18"
+	},
+	"scripts": {
+		"build": "true",
+		"test": "node --test test/*.test.js",
+		"test:ci": "c8 --clean --reporter=text --reporter=lcov --reporter=html --include=src node --test test/*.test.js",
+		"format": "biome format .",
+		"check": "biome check ."
+	},
+	"dependencies": {
+		"@jest/snapshot-utils": "30.0.0-alpha.7",
+		"ci-info": "^4.2.0",
+		"pretty-format": "30.0.0-alpha.7"
+	},
+	"peerDependencies": {
+		"expect": "^29 || ^30"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"c8": "^10.1.3",
+		"expect": "^30.0.0-alpha.7"
+	}
 }
