Refactor renovate.json configuration
Updated Renovate configuration to use a new preset and schema.

--- a/renovate.json
+++ b/renovate.json
@@ -1,19 +1,8 @@
 {
-	"extends": ["config:recommended", ":automergeMinor"],
-	"schedule": "before 11pm on Monday",
-	"prConcurrentLimit": 4,
-	"packageRules": [
-		{
-			"matchManagers": ["npm"],
-			"rangeStrategy": "pin"
-		},
-		{
-			"matchDepTypes": ["engines", "peerDependencies"],
-			"rangeStrategy": "update-lockfile"
-		}
-	],
-	"major": {
-		"dependencyDashboardApproval": true
-	},
-	"postUpdateOptions": ["yarnDedupeHighest"]
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "github>onigoetz/renovate-preset:recommended",
+    ":preserveSemverRanges",
+    ":automergeMinor"
+  ]
 }
